--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,12 +9,17 @@
         </ul>
       </div>
     <% end %>
-
-
-    <%= f.label :status, "ステータス" %>
-    <%= f.text_field :status %>
-    <%= f.label :content, "タスク" %>
-    <%= f.text_field :content %>
     
-    <%= f.submit "作成" %>
+    <div class="form-group">
+        <%= f.label :status, 'ステータス' %>
+        <%= f.text_field :status, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+        <%= f.label :content, 'タスク' %>
+        <%= f.text_field :content, class: 'form-control' %>
+    </div>
+
+    <%= f.submit '作成', class: 'btn btn-primary btn-block' %>
+    
+    
 <% end %>
