--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,3 +1,12 @@
-<h1><%= @task.id%> のタスク編集ページ</h1>
-<%= render "form", task: @task %>
-<%= link_to "一覧に戻る", tasks_path %>
+<div class="row">
+  <div class="col-sm-6 offset-sm-3">
+
+    <h1><%= @task.id%> のタスク編集ページ</h1>
+    <%= render "form", task: @task %>
+    
+    <div class="text-right">
+      <%= link_to "一覧に戻る", tasks_path, class: 'btn btn-secondary' %>
+    </div>
+
+  </div>
+</div>
