--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,28 @@
-<h1>タスク一覧</h1>
+<div class="text-center">
+  <h1>タスク一覧</h1>
+</div>
 
-    <ul>
-        <% @tasks.each do |task| %>
-            <li><%= link_to task.id , task %>: <%= task.status %> &gt; <%= task.content %></li>
-        <% end%>
-    </ul>
-    
-<%= link_to "新規タスクの作成", new_task_path %>
-    
+<div class="row">
+  <div class="col-sm-4 offset-sm-4">
+
+        <table class="table table-borderless">
+          <% @tasks.each do |task| %>
+              <tbody>
+                <tr>
+                  <th scope="row"><%= link_to task.id , task %>:</th>
+                  <td><%= task.status %></td>
+                  <td>&gt;</td>
+                  <td><%= task.content %></td>
+                </tr>
+              </tbody>
+          <% end %>
+        </table>
+
+    <div class="text-right">
+      <%= link_to "新規タスクの作成", new_task_path, class: 'btn btn-primary' %>
+    </div>
+
+  </div>
+</div>
+
+
