--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,13 @@
-<h1>タスク新規作成ページ</h1>
-<%= render "form", task: @task %>
-<%= link_to "一覧に戻る", tasks_path %>
+<div class="row">
+    <div class="col-sm-6 offset-sm-3">
+
+        <h1>タスク新規作成ページ</h1>
+        
+        <%= render "form", task: @task %>
+        
+        <div class="text-right">
+            <%= link_to "一覧に戻る", tasks_path, class: 'btn btn-secondary' %>
+        </div>
+
+    </div>
+</div>
