--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,36 @@
-<h1>id: <%= @task.id %> のタスク詳細ページ</h1>
+<div class="container"></div>
 
-<p>ステータス : <%= @task.status %></p>
-<p>タスク : <%= @task.content %></p>
+    <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+            <h1>id: <%= @task.id %> のタスク詳細ページ</h1>
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col-sm-4 offset-sm-4">
+            <table class="table table-borderless">
+                <tbody>
+                    <tr>
+                        <td>ステータス</td>
+                        <td>:</td>
+                        <td><%= @task.status %></td>
+                    </tr>
+                    <tr>
+                        <td>タスク</td>
+                        <td>:</td>
+                        <td><%= @task.content %></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+            <%= link_to "このタスクを編集する", edit_task_path(@task), class: 'btn btn-success' %> 
+            <%= link_to "このタスクを削除する", @task, method: :delete, data: {confirm:"本当に削除してもよろしいですか？"}, class: 'btn btn-danger' %>
+            <%= link_to "タスク一覧に戻る", tasks_path, class: 'btn btn-secondary' %>
+        </div>
+    </div>
 
-<%= link_to "このタスクを編集する", edit_task_path(@task) %> 
-<%= link_to "このタスクを削除する", @task, method: :delete, data: {confirm:"本当に削除してもよろしいですか？"} %>
-<%= link_to "タスク一覧に戻る", tasks_path %>
+</div>
