--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -6,7 +6,7 @@
         <%= render "form", task: @task %>
         
         <div class="text-right">
-            <%= link_to "一覧に戻る", tasks_path, class: 'btn btn-secondary' %>
+            <%= link_to "タスク一覧", tasks_path, class: 'btn btn-secondary' %>
         </div>
 
     </div>
