--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,18 +7,18 @@
     </div>
     
     <div class="row">
-        <div class="col-sm-4 offset-sm-4">
-            <table class="table table-borderless">
+        <div class="col-sm-6 offset-sm-3">
+            <table class="table table-borderless" style="table-layout:fixed;width:100%;">
                 <tbody>
                     <tr>
-                        <td>ステータス</td>
-                        <td>:</td>
-                        <td><%= @task.status %></td>
+                        <td style="width:30%">ステータス</td>
+                        <td style="width:10%">:</td>
+                        <td style="word-wrap:break-word;"><%= @task.status %></td>
                     </tr>
                     <tr>
-                        <td>タスク</td>
-                        <td>:</td>
-                        <td><%= @task.content %></td>
+                        <td style="width:30%">タスク</td>
+                        <td style="width:10%">:</td>
+                        <td style="word-wrap:break-word;"><%= @task.content %></td>
                     </tr>
                 </tbody>
             </table>
@@ -27,9 +27,11 @@
     
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            <%= link_to "このタスクを編集する", edit_task_path(@task), class: 'btn btn-success' %> 
-            <%= link_to "このタスクを削除する", @task, method: :delete, data: {confirm:"本当に削除してもよろしいですか？"}, class: 'btn btn-danger' %>
-            <%= link_to "タスク一覧に戻る", tasks_path, class: 'btn btn-secondary' %>
+            <div class="text-right">
+                <%= link_to "編集する", edit_task_path(@task), class: 'btn btn-success' %> 
+                <%= link_to "削除する", @task, method: :delete, data: {confirm:"本当に削除してもよろしいですか？"}, class: 'btn btn-danger' %>
+                <%= link_to "タスク一覧", tasks_path, class: 'btn btn-secondary' %>
+            </div>
         </div>
     </div>
 
